--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -1,4 +1,32 @@
-p{
+h2 {
+    text-align: center;
+}
+
+p {
     position: sticky;
     text-align: center;
+}
+
+.unfooter {
+
+    text-align: center;
+    
+    img {
+       height: auto; 
+       width: 75%;
+       display: block;
+       margin-left: auto;
+       margin-right: auto;
+    }
+
+    button {
+        .defaultbtn(white, 3rem, 10px);
+        margin: 40px 0;
+        padding: 15px 25px; 
+
+        &:hover {
+            background: linear-gradient(green, aqua);
+        }
+
+    }  
 }
